--- a/YellowstonePathology/UI/Login/ReceiveSpecimen/ClientOrderShortDetailsPage.xaml
+++ b/YellowstonePathology/UI/Login/ReceiveSpecimen/ClientOrderShortDetailsPage.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib" 
-    x:Class="YellowstonePathology.UI.Login.ReceiveSpecimen.ClientOrderShortDetailsPage"
+    x:Class="YellowstonePathology.UI.Login.Receiving.ClientOrderShortDetailsPage"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     mc:Ignorable="d"
