--- a/YellowstonePathology/UI/Login/ReceiveSpecimen/ReportOrderInfoPage.xaml
+++ b/YellowstonePathology/UI/Login/ReceiveSpecimen/ReportOrderInfoPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Login.ReceiveSpecimen.ReportOrderInfoPage"
+﻿<UserControl x:Class="YellowstonePathology.UI.Login.Receiving.ReportOrderInfoPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
