--- a/YellowstonePathology/UI/AdministrationWorkspace.xaml
+++ b/YellowstonePathology/UI/AdministrationWorkspace.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:LocalUI="clr-namespace:YellowstonePathology.UI">        
     <WrapPanel Grid.Column="0" Grid.Row="0">
-        <Button Click="ButtonBuildJson_Click" Width="200" Height="30" Margin="5,5,5,5">CPT Codes to JSON</Button>
+        <Button Click="ButtonBuildJson_Click" Width="200" Height="30" Margin="5,5,5,5">Build JSON</Button>
         <Button Name="ButtonPOCRetension" Click="ButtonPOCRetension_Click" Width="200" Height="30" Margin="5,5,5,5">POC Retension</Button>
         <Button Name="ButtonCytologyUnsatLetters" Click="ButtonCytologyUnsatLetters_Click" Width="200" Height="30" Margin="5,5,5,5">Cytology Unsat Letters</Button>
         <Button Name="ButtonConvertXPSToPDF" Click="ButtonConvertXPSToPDF_Click" Width="200" Height="30" Margin="5,5,5,5">Convert XPS To PDF</Button>                        
