--- a/YellowstonePathology/UI/Cutting/CuttingPage.xaml
+++ b/YellowstonePathology/UI/Cutting/CuttingPage.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Cutting.CuttingPage"
+﻿<UI:PageControl x:Class="YellowstonePathology.UI.Cutting.CuttingPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Cutting="clr-namespace:YellowstonePathology.UI.Cutting"
+             xmlns:UI="clr-namespace:YellowstonePathology.UI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="800">
     <UserControl.Resources>
@@ -158,4 +159,4 @@
 
         </ListBox>
     </Grid>
-</UserControl>
+</UI:PageControl>
