--- a/YellowstonePathology/UI/Login/DeleteAccessionPage.xaml
+++ b/YellowstonePathology/UI/Login/DeleteAccessionPage.xaml
@@ -70,6 +70,7 @@
         </Grid>
 
         <Border Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
+        <Button Name="ButtonBack" Grid.Row="2" HorizontalAlignment="Left" Margin="5,5,5,5" Click="ButtonBack_Click"  Width="100" Height="40">Back</Button>
 
         <StackPanel Grid.Row="2" HorizontalAlignment="Right" Orientation="Horizontal">
             <Button Name="ButtonClose" Margin="5,5,5,5" Click="ButtonClose_Click" Width="100" Height="40">Close</Button>
