--- a/YellowstonePathology/UI/MySql/NonpersistentTableDialog.xaml
+++ b/YellowstonePathology/UI/MySql/NonpersistentTableDialog.xaml
@@ -29,6 +29,7 @@
                 <MenuItem Header="Add Missing Columns to MySql" Click="MenuItemAddMissingColumns_Click" Margin="5"></MenuItem>
                 <MenuItem Header="Create MySql Indexes" Click="MenuItemAddIndexes_Click" Margin="5"></MenuItem>
                 <MenuItem Header="Create MySql Foreign Keys" Click="MenuItemAddForeignKeys_Click" Margin="5"></MenuItem>
+                <MenuItem Header="Create All MySql Auto Increments" Click="MenuItemCreateAutoIncrements_Click" Margin="5"></MenuItem>
             </MenuItem>
             <MenuItem Header="Load Data" Click="MenuItemLoadData_Click" Margin="5" IsEnabled="{Binding Path=HaveDBSelection}"></MenuItem>
         </Menu>
