--- a/YellowstonePathology/UI/Flow/FlowWorkspace.xaml
+++ b/YellowstonePathology/UI/Flow/FlowWorkspace.xaml
@@ -403,6 +403,7 @@
 						<Grid.RowDefinitions>
 							<RowDefinition Height="100"></RowDefinition>							
 							<RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
 						</Grid.RowDefinitions>
 
                         <ListView Grid.Column="0" Grid.Row="0" Name="listViewCellPopulationsOfInterest" ItemsSource="{Binding Path=PanelSetOrderLeukemiaLymphoma.FlowMarkerCollection.CellPopulationsOfInterest}"
@@ -486,6 +487,10 @@
 							</ListView.View>
 						</ListView>
 
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Margin="2,2,2,2">Marker Count:</TextBlock>
+                            <TextBlock Text="{Binding Path=MarkerCount}" Margin="2,2,2,2"></TextBlock>
+                        </StackPanel>
 					</Grid>		
 				</TabItem>				
 				<TabItem Header="Results">
@@ -680,59 +685,58 @@
 							<Button HorizontalAlignment="Left" Name="buttonSignReport" Click="ButtonSignReport_Click" Height="25" Width="100" IsEnabled="{Binding Path=SignReportButtonEnabled}" Content="{Binding Path=SignReportButtonContent}" />							
 						</StackPanel>						
 					</Grid>
-				</TabItem>                                
+				</TabItem>
                 <TabItem Name="TabItemCommonMarkers" Header="Markers(Common)">
-                  <Grid>
-                    <Grid.ColumnDefinitions>
-                      <ColumnDefinition></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                      <RowDefinition Height="Auto"></RowDefinition>
-                      <RowDefinition Height="*"></RowDefinition>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
-                    </Grid.RowDefinitions>
+                        </Grid.RowDefinitions>
 
-                    <StackPanel Orientation="Horizontal" Margin="5" Grid.Column="0" Grid.Row="0">
-                      <TextBlock VerticalAlignment="Center" Width="200" Style="{StaticResource GatingTextBlock}" TextAlignment="Right" Margin="2,2,2,2">Marker Panel:</TextBlock>
+                        <StackPanel Orientation="Horizontal" Margin="5" Grid.Column="0" Grid.Row="0">
+                            <TextBlock VerticalAlignment="Center" Width="200" Style="{StaticResource GatingTextBlock}" TextAlignment="Right" Margin="2,2,2,2">Marker Panel:</TextBlock>
                             <ComboBox Name="comboBoxCommonMarkerPanel" Width="150" ItemsSource="{Binding Path=FlowPanelList}" DisplayMemberPath="PanelName" SelectedValuePath="PanelId" Height="22" Margin="2,2,2,2"/>
-                            <Button Name="ButtonAddCommonMarkerPanel" Height="20" Width="100" Click="ButtonAddCommonMarkerPanel_Click" Margin="2,2,2,2">Add Panel</Button>              
-                    </StackPanel>
-            
-                    <ListView Name="listViewCommonMarkers" Grid.Column="0" Grid.Row="1" 
+                            <Button Name="ButtonAddCommonMarkerPanel" Height="20" Width="100" Click="ButtonAddCommonMarkerPanel_Click" Margin="2,2,2,2">Add Panel</Button>
+                        </StackPanel>
+
+                        <ListView Name="listViewCommonMarkers" Grid.Column="0" Grid.Row="1" 
 				        ItemsSource="{Binding Path=PanelSetOrderLeukemiaLymphoma.FlowMarkerCollection}" IsEnabled="{Binding Path=IsWorkspaceEnabled}">
-                      <ListView.View>
-                        <GridView>
-                          <GridViewColumn Width="150" DisplayMemberBinding="{Binding Path=Name}" Header="Marker"/>
-                          <GridViewColumn Header="Intensity" Width="150">
-                            <GridViewColumn.CellTemplate>
-                              <DataTemplate>                        
-                                <ComboBox Width="130"  Margin="3" IsEditable="True" Text="{Binding Path=Result}">
-                                  <ComboBoxItem>Negative</ComboBoxItem>
-                                  <ComboBoxItem>Weakly Positive</ComboBoxItem>
-                                  <ComboBoxItem>Positive</ComboBoxItem>
-                                  <ComboBoxItem>Strongly Positive</ComboBoxItem>
-                                </ComboBox>                        
-                              </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                          </GridViewColumn>
-                        </GridView>
-                      </ListView.View>
-                    </ListView>
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Width="150" DisplayMemberBinding="{Binding Path=Name}" Header="Marker"/>
+                                    <GridViewColumn Header="Intensity" Width="150">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <ComboBox Width="130"  Margin="3" IsEditable="True" Text="{Binding Path=Result}">
+                                                    <ComboBoxItem>Negative</ComboBoxItem>
+                                                    <ComboBoxItem>Weakly Positive</ComboBoxItem>
+                                                    <ComboBoxItem>Positive</ComboBoxItem>
+                                                    <ComboBoxItem>Strongly Positive</ComboBoxItem>
+                                                </ComboBox>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
 
                         <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="2,2,2,2">Report Comment:</TextBlock>
                         <TextBox Name="TextBoxReportComment" Grid.Column="0" Grid.Row="3" Text="{Binding Path=PanelSetOrderLeukemiaLymphoma.ReportComment, UpdateSourceTrigger=PropertyChanged}" 
                                  HorizontalAlignment="Stretch" Height="100" AcceptsReturn="True" Margin="2,2,2,2"></TextBox>
-                    </Grid>          
+                    </Grid>
                 </TabItem>
-        
-			</TabControl>
+            </TabControl>
 			
 			<GridSplitter Height="5" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Center"></GridSplitter>
 			
-			<TabControl Name="tabControlBottomLeftPane" Grid.Column="0" Grid.Row="3">                                                                
-                
-				<TabItem Header="List">
+			<TabControl Name="tabControlBottomLeftPane" Grid.Column="0" Grid.Row="3">
+
+                <TabItem Header="List">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition></ColumnDefinition>
@@ -745,7 +749,7 @@
                         <Button Width="125" Height="30" Grid.Column="0" Grid.Row="0" Click="ButtonReportOrder_Click" HorizontalAlignment="Left" Margin="2,2,2,2">Additional Testing</Button>
                         <Button Width="75" Height="30" Grid.Column="0" Grid.Row="0" Click="ButtonRefresh_Click" HorizontalAlignment="Right" Margin="2,2,2,2">Refresh</Button>
 
-						<ListView Name="ListViewFlowCaseList" Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Path=FlowLogSearch.FlowLogList}" SelectionChanged="ListViewFlowCaseList_SelectionChanged">
+                        <ListView Name="ListViewFlowCaseList" Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Path=FlowLogSearch.FlowLogList}" SelectionChanged="ListViewFlowCaseList_SelectionChanged">
 
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="ListViewItem">
@@ -778,7 +782,7 @@
                                     </Style.Triggers>
                                 </Style>
                             </ListView.ItemContainerStyle>
-                            
+
                             <ListView.View>
                                 <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Flow Case List">
                                     <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="85"/>
@@ -790,10 +794,9 @@
                                 </GridView>
                             </ListView.View>
                         </ListView>
-                    </Grid>                                                          
-				</TabItem>
-                
-				<TabItem Name="tablItemSearch" Header="Search">
+                    </Grid>
+                </TabItem>
+                <TabItem Name="tablItemSearch" Header="Search">
 					<StackPanel>
 						<StackPanel Orientation="Horizontal">
 							<RadioButton Name="radioButtonSearchCurrentMonth"
