--- a/YellowstonePathology/UI/Surgical/TypingWorkspace.xaml
+++ b/YellowstonePathology/UI/Surgical/TypingWorkspace.xaml
@@ -191,6 +191,7 @@
                     <Button Grid.Column="1" Grid.Row="13" Margin="2" Click="ButtonProviderEntry_Click" Width="200" HorizontalAlignment="Left" IsEnabled="True">Provider Entry</Button>
                     <Button Grid.Column="1" Grid.Row="14" Margin="2" Click="ButtonPatientDetails_Click" Width="200" HorizontalAlignment="Left" IsEnabled="True">Patient Details</Button>
                     <Button Grid.Column="1" Grid.Row="15" Margin="2" Click="ButtonPatientLinking_Click" Width="200" HorizontalAlignment="Left" IsEnabled="True">Patient Linking</Button>
+                    <Button Grid.Column="1" Grid.Row="15" Margin="2" Click="ButtonUpdateFromADT_Click" Width="200" HorizontalAlignment="Left" IsEnabled="True">Update from ADT</Button>
 
 
                     <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=AccessionOrder.PLastName, Converter={StaticResource UpperCaseConverter}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding Path=FieldEnabler.IsProtectedEnabled}" Style="{StaticResource NewTextBox}" Width="200" HorizontalAlignment="Left"></TextBox>
