--- a/YellowstonePathology/UI/Login/FinalizeAccession/SpecimenMappingPage.xaml
+++ b/YellowstonePathology/UI/Login/FinalizeAccession/SpecimenMappingPage.xaml
@@ -17,6 +17,7 @@
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -26,10 +27,13 @@
                 <CheckBox Grid.Column="0" Grid.Row="0" IsChecked="{Binding Path=ClientAccessioned}" Margin="2,2,2,2" Tag="{Binding Path=.}" 
                           Checked="CheckBoxSlideClientAccessioned_Checked" Unchecked="CheckBoxSlideClientAccessioned_Unchecked"></CheckBox>
                 <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="Slide:"></TextBlock>
-                <TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=Label}"></TextBlock>                
+                <TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=Label}"></TextBlock>
                 <TextBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=ClientLabel}" Width="50"></TextBox>
+                <ComboBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" BorderBrush="LightGray" BorderThickness="1" Width="100" Text="{Binding Path=LocationId}" IsEditable="True">
+                    <ComboBoxItem>YPIBLGS</ComboBoxItem>
+                    <ComboBoxItem>STJMSHLTH</ComboBoxItem>
+                </ComboBox>
                 <TextBlock Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=TestName}" Width="150"></TextBlock>
-                
             </Grid>
         </HierarchicalDataTemplate>
         
@@ -37,6 +41,7 @@
             <Grid Margin="2,2,2,2">
                 
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -54,6 +59,10 @@
                 <TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=Label}"></TextBlock>
                 <TextBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=ClientLabel}" Width="50"></TextBox>                
                 <TextBlock Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=FacilityId}" HorizontalAlignment="Right"></TextBlock>
+                <ComboBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" BorderBrush="LightGray" BorderThickness="1" Width="100" Text="{Binding Path=LocationId}" IsEditable="True">
+                    <ComboBoxItem>YPIBLGS</ComboBoxItem>
+                    <ComboBoxItem>STJMSHLTH</ComboBoxItem>
+                </ComboBox>
                 
             </Grid>
         </HierarchicalDataTemplate>
@@ -138,8 +147,7 @@
             <TreeView Name="TreeViewSpecimenOrder" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="5" ItemsSource="{Binding Path=AccessionOrder.SpecimenOrderCollection}"
 							ItemTemplate="{StaticResource DataTemplateSpecimenOrder}" Margin="2,10,2,2" BorderThickness="1">
             </TreeView>
-
-            <Button Grid.Column="0" Grid.Row="6" Click="ButtonUpdateTrackingLog_Click" Width="150" Height="50" HorizontalAlignment="Right" Margin="2,2,2,2">Update Tracking Log</Button>
+            
             <Button Grid.Column="3" Grid.Row="6" Click="ButtonPrint_Click" Width="100" Height="50" HorizontalAlignment="Right" Margin="2,2,2,2">Print Labels</Button>
 
         </Grid>
