--- a/YellowstonePathology/UI/Test/MPNExtendedReflexPage.xaml
+++ b/YellowstonePathology/UI/Test/MPNExtendedReflexPage.xaml
@@ -111,17 +111,20 @@
                 <TextBlock Grid.Column="0" Grid.Row="4" FontWeight="Bold" Margin="2,2,2,2">MPL Result:</TextBlock>
                 <TextBox Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.MPLResult}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-                <TextBlock Grid.Column="0" Grid.Row="5" FontWeight="Bold" Margin="2,2,2,2">Comment:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBlock Grid.Column="0" Grid.Row="5" FontWeight="Bold" Margin="2,2,2,2">JAK2 Mutation:</TextBlock>
+                <TextBox Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.JAK2Mutation}" TextWrapping="Wrap" AcceptsReturn="True" />
+
+                <TextBlock Grid.Column="0" Grid.Row="7" FontWeight="Bold" Margin="2,2,2,2">Comment:</TextBlock>
+                <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" TextWrapping="Wrap" AcceptsReturn="True" />
                 
-                <TextBlock Grid.Column="0" Grid.Row="7" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBlock Grid.Column="0" Grid.Row="9" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
+                <TextBox Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-				<TextBlock Grid.Column="0" Grid.Row="9" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
+				<TextBlock Grid.Column="0" Grid.Row="11" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
+                <TextBox Grid.Column="0" Grid.Row="12" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-				<TextBlock Grid.Column="0" Grid.Row="11" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="12" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True" />
+				<TextBlock Grid.Column="0" Grid.Row="13" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
+                <TextBox Grid.Column="0" Grid.Row="14" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True" />
 
 				<TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
 				<CheckBox Grid.Column="1" Grid.Row="15" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
