--- a/YellowstonePathology/UI/Test/LynchSyndromeEvaluationMatrixPage.xaml
+++ b/YellowstonePathology/UI/Test/LynchSyndromeEvaluationMatrixPage.xaml
@@ -55,7 +55,19 @@
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <ListView Name="ListViewResults" Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding Path=LSEResultCollection}">
+                    <ListView Name="ListViewResults" Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" SelectionChanged="ListViewResults_SelectionChanged" ItemsSource="{Binding Path=LSERuleCollection}">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Style.Triggers>
+                                    <MultiDataTrigger>
+                                        <MultiDataTrigger.Conditions>
+                                            <Condition Binding="{Binding Path=IHCMatched}" Value="True"/>
+                                        </MultiDataTrigger.Conditions>
+                                        <Setter Property="Background" Value="#cbf4c8"/>
+                                    </MultiDataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ListView.ItemContainerStyle>
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Indication" Width="90" DisplayMemberBinding="{Binding Path=Indication}" />
@@ -63,12 +75,13 @@
                                 <GridViewColumn Header="MSH2" Width="90" DisplayMemberBinding="{Binding Path=MSH2Result}" />
                                 <GridViewColumn Header="MSH6" Width="90" DisplayMemberBinding="{Binding Path=MSH6Result}" />
                                 <GridViewColumn Header="PMS2" Width="90" DisplayMemberBinding="{Binding Path=PMS2Result}" />
+                                <GridViewColumn Header="Additional Testing" Width="180" DisplayMemberBinding="{Binding Path=AdditionalTesting}" />
                                 <GridViewColumn Header="BRAF" Width="90" DisplayMemberBinding="{Binding Path=BrafResult}" />
                                 <GridViewColumn Header="Meth" Width="90" DisplayMemberBinding="{Binding Path=MethResult}" />
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    
+
                 </Grid>
             </ScrollViewer>
 
